Fix printing with XPS printers on Windows.

Check to see if a given printer is XPS. If so, revert back to non-GDI
text printing path.

BUG=653257

Review-Url: https://codereview.chromium.org/2392343003
Cr-Commit-Position: refs/heads/master@{#423372}

Former-commit-id: 1f8436ba96d348607317d2d34cb604a9243f0ff0