printing/print_settings.cc
@@ -151,6 +151,7 @@ void PrintSettings::Clear() {
   duplex_mode_ = UNKNOWN_DUPLEX_MODE;
 #if defined(OS_WIN)
   print_text_with_gdi_ = false;
+  printer_is_xps_ = false;
 #endif
 }
 
